// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`borderBottomLeftRadius renders 0 1`] = `
Array [
  .c0 {
  border-bottom-left-radius: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-left-radius: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-left-radius: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-left-radius: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBottomLeftRadius renders function 1`] = `
Array [
  .c0 {
  border-bottom-left-radius: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-left-radius: has;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-left-radius: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-left-radius: has;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBottomLeftRadius renders invalid theme path 1`] = `
Array [
  .c0 {
  border-bottom-left-radius: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-left-radius: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-left-radius: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-left-radius: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBottomLeftRadius renders negative number 1`] = `
Array [
  .c0 {
  border-bottom-left-radius: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-left-radius: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-left-radius: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-left-radius: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBottomLeftRadius renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  border-bottom-left-radius: July;
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-left-radius: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-left-radius: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-left-radius: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-bottom-left-radius: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-left-radius: July;
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-left-radius: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-left-radius: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-left-radius: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-bottom-left-radius: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-left-radius: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-left-radius: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-left-radius: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-left-radius: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-bottom-left-radius: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-left-radius: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-left-radius: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-left-radius: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-left-radius: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-bottom-left-radius: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderBottomLeftRadius renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    border-bottom-left-radius: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-left-radius: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-left-radius: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-bottom-left-radius: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    border-bottom-left-radius: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-left-radius: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-left-radius: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-bottom-left-radius: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-left-radius: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-left-radius: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-left-radius: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-bottom-left-radius: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-left-radius: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-left-radius: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-bottom-left-radius: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-bottom-left-radius: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderBottomLeftRadius renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  border-bottom-left-radius: July;
}

@media May {
  .c0 {
    border-bottom-left-radius: August;
  }
}

@media April {
  .c0 {
    border-bottom-left-radius: September;
  }
}

@media January {
  .c0 {
    border-bottom-left-radius: November;
  }
}

@media April {
  .c0 {
    border-bottom-left-radius: August;
  }
}

@media June {
  .c0 {
    border-bottom-left-radius: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-left-radius: July;
}

@media May {
  .c0 {
    border-bottom-left-radius: August;
  }
}

@media April {
  .c0 {
    border-bottom-left-radius: September;
  }
}

@media January {
  .c0 {
    border-bottom-left-radius: November;
  }
}

@media April {
  .c0 {
    border-bottom-left-radius: August;
  }
}

@media June {
  .c0 {
    border-bottom-left-radius: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-left-radius: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-bottom-left-radius: November;
  }
}

@media April {
  .c0 {
    border-bottom-left-radius: January;
  }
}

@media January {
  .c0 {
    border-bottom-left-radius: December;
  }
}

@media April {
  .c0 {
    border-bottom-left-radius: April;
  }
}

@media June {
  .c0 {
    border-bottom-left-radius: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-left-radius: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-bottom-left-radius: November;
  }
}

@media April {
  .c0 {
    border-bottom-left-radius: January;
  }
}

@media January {
  .c0 {
    border-bottom-left-radius: December;
  }
}

@media April {
  .c0 {
    border-bottom-left-radius: April;
  }
}

@media June {
  .c0 {
    border-bottom-left-radius: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderBottomLeftRadius renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    border-bottom-left-radius: July;
  }
}

@media April {
  .c0 {
    border-bottom-left-radius: August;
  }
}

@media January {
  .c0 {
    border-bottom-left-radius: September;
  }
}

@media April {
  .c0 {
    border-bottom-left-radius: November;
  }
}

@media June {
  .c0 {
    border-bottom-left-radius: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    border-bottom-left-radius: July;
  }
}

@media April {
  .c0 {
    border-bottom-left-radius: August;
  }
}

@media January {
  .c0 {
    border-bottom-left-radius: September;
  }
}

@media April {
  .c0 {
    border-bottom-left-radius: November;
  }
}

@media June {
  .c0 {
    border-bottom-left-radius: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-bottom-left-radius: January;
  }
}

@media April {
  .c0 {
    border-bottom-left-radius: December;
  }
}

@media January {
  .c0 {
    border-bottom-left-radius: April;
  }
}

@media April {
  .c0 {
    border-bottom-left-radius: May;
  }
}

@media June {
  .c0 {
    border-bottom-left-radius: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-bottom-left-radius: January;
  }
}

@media April {
  .c0 {
    border-bottom-left-radius: December;
  }
}

@media January {
  .c0 {
    border-bottom-left-radius: April;
  }
}

@media April {
  .c0 {
    border-bottom-left-radius: May;
  }
}

@media June {
  .c0 {
    border-bottom-left-radius: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderBottomLeftRadius renders postitive number 1`] = `
Array [
  .c0 {
  border-bottom-left-radius: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-left-radius: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-left-radius: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-left-radius: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBottomLeftRadius renders string 1`] = `
Array [
  .c0 {
  border-bottom-left-radius: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-left-radius: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-left-radius: June;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-left-radius: June;
}

<div
    className="c0"
  />,
]
`;

exports[`borderBottomLeftRadius renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`borderBottomLeftRadius renders valid theme path 1`] = `
Array [
  .c0 {
  border-bottom-left-radius: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-left-radius: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-left-radius: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-bottom-left-radius: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
